# a-view

./: .dockerignore  .env  .env.development  .env.local  .env.real  .env.test  .env.vx50  .gitignore  CLAUDE.md  Dockerfile.local  Dockerfile.real  Dockerfile.test  README.md  aview.service.example  deploy.sh  docker-compose.local.yml  docker-compose.real.yml  docker-compose.test.yml  env.sample  main.py  make.sh  pyproject.toml  start.sh
.github/chatmodes/: kdy-style.chatmode.md
app/: config.py  logger.py  main.py  utils.py
app/core/: config.py  convert_lib.py  logger.py  stat_scheduler.py  stats_db.py  sys_info.py  utils.py  utils_backup.py  utils_safe.py  view_lib.py
app/domain/: file_ext_definition.py  schemas.py  static_db.py
app/endpoints/: aview_routes.py  cache_routes.py  home_routes.py  stats_routes.py
app/static/css/: styles.css
app/templates/: about.html  csv_viewer.html  dashboard.html  index.html  log_view.html  run_test.html  txt_viewer.html  usage.html  view_error.html  view_html.html  view_pdf.html  viewer.html
app/templates/common/: nav.html
app/templates/viewer/: csv.html  image.html  markdown.html  markdown_new.html  pdf.html
code_sample/: README_cleanup_test.md  async2_test.py  async_test.py  cache_stats_20250915_162140.json  cache_stats_20250915_162216.json  check.sh  check1.sh  check2.sh  error.sh  run_cleanup_test.sh  stress_test.py  t1.sh  test_cleanup_file.py  test_scheduler_cleanup.py
doc/: utils.py  테스트1.md
